// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`looks right for bids in live auctions that haven't started yet 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "center",
        "height": 120,
        "marginLeft": 20,
        "marginRight": 20,
        "width": 708,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexBasis": 0,
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
        },
      ]
    }
  >
    <AROpaqueImageView
      imageURL="https://d32dm0rphc51dk.cloudfront.net/4GlhFa7ci5-0W25sjDNFIQ/large.jpg"
      style={
        Array [
          Object {
            "borderRadius": 4,
            "height": 80,
            "width": 80,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexDirection": "column",
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
            "marginBottom": 0,
            "marginLeft": 10,
            "marginRight": 10,
            "marginTop": 0,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#cccccc",
              "fontSize": 11,
              "textAlign": "left",
            },
            Array [
              Object {
                "color": "#f7625a",
                "marginBottom": 3,
              },
            ],
            Object {
              "fontFamily": "AvantGardeGothicITC",
            },
          ]
        }
      >
        OUTBID
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "black",
              "fontSize": 16,
              "textAlign": "left",
            },
            undefined,
            Object {},
            Object {
              "fontFamily": "ReactNativeAGaramondPro-Regular",
            },
          ]
        }
      >
        Lot 8 · Robert Longo 
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "black",
              "fontSize": 16,
              "textAlign": "left",
            },
            undefined,
            Object {},
            Object {
              "fontFamily": "ReactNativeAGaramondPro-Regular",
            },
          ]
        }
      >
        $10,000 (1 Bid)
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#e5e5e5",
          "height": 1,
          "width": "100%",
        },
      ]
    }
  />
</View>
`;

exports[`looks right for bids in live open auctions 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "center",
        "height": 120,
        "marginLeft": 20,
        "marginRight": 20,
        "width": 708,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexBasis": 0,
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
        },
      ]
    }
  >
    <AROpaqueImageView
      imageURL="https://d32dm0rphc51dk.cloudfront.net/4GlhFa7ci5-0W25sjDNFIQ/large.jpg"
      style={
        Array [
          Object {
            "borderRadius": 4,
            "height": 80,
            "width": 80,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexDirection": "column",
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
            "marginBottom": 0,
            "marginLeft": 10,
            "marginRight": 10,
            "marginTop": 0,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#cccccc",
              "fontSize": 11,
              "textAlign": "left",
            },
            Array [
              Object {
                "color": "#6e1fff",
                "marginBottom": 3,
              },
            ],
            Object {
              "fontFamily": "AvantGardeGothicITC",
            },
          ]
        }
      >
        JOIN LIVE
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "black",
              "fontSize": 16,
              "textAlign": "left",
            },
            undefined,
            Object {},
            Object {
              "fontFamily": "ReactNativeAGaramondPro-Regular",
            },
          ]
        }
      >
        Lot 8 · Robert Longo 
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "black",
              "fontSize": 16,
              "textAlign": "left",
            },
            undefined,
            Object {},
            Object {
              "fontFamily": "ReactNativeAGaramondPro-Regular",
            },
          ]
        }
      >
        Live bidding now open
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#e5e5e5",
          "height": 1,
          "width": "100%",
        },
      ]
    }
  />
</View>
`;

exports[`renders correctly 1`] = `
<View
  accessible={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignSelf": "center",
        "height": 120,
        "marginLeft": 20,
        "marginRight": 20,
        "width": 708,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexBasis": 0,
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
        },
      ]
    }
  >
    <AROpaqueImageView
      imageURL="https://d32dm0rphc51dk.cloudfront.net/4GlhFa7ci5-0W25sjDNFIQ/large.jpg"
      style={
        Array [
          Object {
            "borderRadius": 4,
            "height": 80,
            "width": 80,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexDirection": "column",
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
            "marginBottom": 0,
            "marginLeft": 10,
            "marginRight": 10,
            "marginTop": 0,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#cccccc",
              "fontSize": 11,
              "textAlign": "left",
            },
            Array [
              Object {
                "color": "#f7625a",
                "marginBottom": 3,
              },
            ],
            Object {
              "fontFamily": "AvantGardeGothicITC",
            },
          ]
        }
      >
        OUTBID
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "black",
              "fontSize": 16,
              "textAlign": "left",
            },
            undefined,
            Object {},
            Object {
              "fontFamily": "ReactNativeAGaramondPro-Regular",
            },
          ]
        }
      >
        Lot 8 · Robert Longo 
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "black",
              "fontSize": 16,
              "textAlign": "left",
            },
            undefined,
            Object {},
            Object {
              "fontFamily": "ReactNativeAGaramondPro-Regular",
            },
          ]
        }
      >
        $10,000 (1 Bid)
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#e5e5e5",
          "height": 1,
          "width": "100%",
        },
      ]
    }
  />
</View>
`;
